RT-26553: fx:jar produces corrupted manifest if named or unnamed param length exceeds 56 characters
Not do line wrapping when encoding/decoding application arguments

Reviewed-by: kcr, shemnon